--- a/css/style.scss
+++ b/css/style.scss
@@ -1679,7 +1679,7 @@ background-color: white;
   }
 }
     position: absolute;
-    transition: .5s;
+    transition: .5s ease;
     list-style: none;
     margin-left: 10px;
 padding-left: 0;
@@ -1705,8 +1705,8 @@ h4{
 }
 h5{
   transform: translateY(-200px);
-
 }
+
   .background-white{
     transform: scaleY(50);
     background-color: white;
@@ -1720,7 +1720,7 @@ h5{
   ul{
     opacity: 1;
     height: auto;
-      transform: scale(1) translateY(-100px);
+      transform: scale(1) translateY(-200px);
   }
 }
 
