--- a/css/style.css
+++ b/css/style.css
@@ -1190,7 +1190,7 @@ footer {
   #leadership .portfolio-list:hover ul {
     opacity: 1;
     height: auto;
-    transform: scale(1) translateY(-200px); }
+    transform: scale(1) translateY(-125px); }
 
 /* CLOSES #LEADERSHIP*/
 /* ----------------------------------------------------------------- */
@@ -1389,7 +1389,7 @@ article {
         z-index: 10; }
       #leadership .portfolio-list ul {
         position: absolute;
-        transition: .5s;
+        transition: .5s ease;
         list-style: none;
         margin-left: 10px;
         padding-left: 0;
@@ -1417,7 +1417,6 @@ article {
       transition: .1s; }
     #leadership .portfolio-list:hover .content-container {
       padding-top: 30px !important;
-      transform-origin: bottom;
       height: 100%; }
     #leadership .portfolio-list:hover ul {
       opacity: 1;
