--- a/css/style.scss
+++ b/css/style.scss
@@ -1720,7 +1720,7 @@ h5{
   ul{
     opacity: 1;
     height: auto;
-      transform: scale(1) translateY(-200px);
+      transform: scale(1) translateY(-125px);
   }
 }
 
@@ -2026,7 +2026,7 @@ background-color: white;
   }
 }
     position: absolute;
-    transition: .5s;
+    transition: .5s ease;
     list-style: none;
     margin-left: 10px;
 padding-left: 0;
@@ -2061,7 +2061,7 @@ h5{
   }
   .content-container{
     padding-top: 30px!important;
-      transform-origin: bottom;
+
       height: 100%;
   }
   ul{
