--- a/css/style.css
+++ b/css/style.css
@@ -1088,7 +1088,7 @@ footer {
   #leadership .portfolio-list {
     box-shadow: 0px 0px 5px #DBDADA;
     float: left;
-    height: 42.5vh;
+    height: 50vh;
     position: relative;
     transition: .5s;
     overflow: hidden; }
@@ -1147,7 +1147,7 @@ footer {
   #leadership .portfolio-list:hover ul {
     opacity: 1;
     transition-delay: 0.05s !important;
-    transform: scale(1) translateY(-125px); }
+    transform: scale(1) translateY(-100px); }
 
 /* CLOSES #LEADERSHIP*/
 /* ----------------------------------------------------------------- */
@@ -1495,7 +1495,12 @@ article {
 
   #brokerage #leadership {
     padding-top: 9vh;
-    padding-bottom: 10vh; } }
+    padding-bottom: 10vh; }
+
+  #leadership {
+    padding: 10vh; }
+    #leadership .container-p .portfolio-list {
+      min-height: 325px; } }
 /* !!CLOSES 1024PX @MEDIA QUERY!! */
 /* ----------------------------------------------------------------- */
 /* !!OPENS 1200PX @MEDIA QUERY!! */
@@ -1793,13 +1798,14 @@ article {
     .footer-nav li {
       float: right; }
 
-  #leadership .portfolio-list {
+  #leadership .container-p .portfolio-list {
     box-shadow: 0px 0px 5px #DBDADA;
     float: left;
     height: 40vh;
     position: relative;
     transition: .5s;
-    overflow: hidden; }
+    overflow: hidden;
+    min-height: 0; }
   #leadership .portfolio-list:hover h4 {
     transform: translateY(-175px); }
   #leadership .portfolio-list:hover h5 {
