--- a/css/style.css
+++ b/css/style.css
@@ -1058,6 +1058,10 @@ footer {
 
 /* ----------------------------------------------------------------- */
 /* BEGINS TEAM */
+.leadership-container-padding {
+  padding-left: 0 !important;
+  padding-right: 0 !important; }
+
 #leadership {
   padding-top: 10vh;
   overflow: scroll !important; }
