--- a/css/style.scss
+++ b/css/style.scss
@@ -1541,6 +1541,10 @@ margin-top: -5vh;
 
 /* BEGINS TEAM */
 
+.leadership-container-padding{
+  padding-left: 0!important;
+  padding-right: 0!important;
+}
 
     #leadership{
       padding-top: 10vh;
