--- a/css/style.css
+++ b/css/style.css
@@ -587,9 +587,10 @@ footer {
 #container-1 .video-background {
   position: absolute;
   float: left;
-  right: -50vw;
   height: 100vh;
   z-index: -100; }
+  #container-1 .video-background img {
+    height: 100%; }
 
 #container-2 {
   padding-top: 15vh;
