--- a/css/style.scss
+++ b/css/style.scss
@@ -2158,9 +2158,92 @@ h5{
 }
 }
 
+
+
+/* BEGINS PROMOTIONS */
+
+/* ----------------------------------------------------------------- */
+
+
+#promotion{
+  height: 100vh;
+  .image-container{
+    position: relative;
+    float: left;
+    height: 50vh;
+    overflow: hidden;
+
+    img{
+      position: absolute;
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  .promotion-content-container{
+    padding-top: 2.5vh;
+  }
+
+  .form-container{
+    background-color: #f1f1f1;
+    height: 15vh;
+    margin-left:  8.5vw;
+    width: 91.5vw;
+    position: absolute;
+    top: 77.5vh;
+    border-left: 10px solid $green;
+  }
+}/* CLOSES #PROMOTION */
+
+
+/* ENDS PROMOTIONS */
+
+/* ----------------------------------------------------------------- */
+
+
+
+
 }/* !!CLOSES 768PX @MEDIA QUERY!! */
 
 /* ----------------------------------------------------------------- */
+
+
+
+
+@media (min-width: 992px){
+  #promotion{
+    height: 100vh;
+    .image-container{
+      position: relative;
+      float: left;
+      height: 100vh;
+      overflow: hidden;
+
+      img{
+        position: absolute;
+        height: 100%;
+        width: auto;
+      }
+    }
+
+    .promotion-content-container{
+      padding-top: 12.5vh;
+    }
+
+
+
+
+    .form-container{
+      background-color: #f1f1f1;
+      height: 30vh;
+      margin-left: 50vw;
+      width: 50vw;
+      position: absolute;
+      top: 57.5vh;
+      border-left: 10px solid $green;
+    }
+  }
+}
 
 @media (min-width: 1024px){
 
@@ -2817,6 +2900,7 @@ h5{
       position: absolute;
       height: 100%;
       width: auto;
+      min-width: 100%;
     }
   }
 
