--- a/css/style.scss
+++ b/css/style.scss
@@ -1816,19 +1816,17 @@ article{
 /* ----------------------------------------------------------------- */
 
 #promotion{
-  height: 150vh;
+  height: 175vh;
   div{
     float: left;
   }
 
   h1{
     float: left;
-padding-bottom: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 
   h3{
-    margin-top: 20px;
     padding-bottom: 0;
     margin-bottom: 0;
   }
@@ -1851,20 +1849,48 @@ padding-bottom: 25px;
     }
   }
 
+h4{
+
+}
   .promotion-content-container{
-    padding-top: 2.5vh;
+    padding-top: 40px;
   }
 
   .form-container{
     background-color: #f1f1f1;
-    height: 30vh;
+    height: 100vh;
     margin-left: 8.5vw;
     width: 91.5vw;
     position: absolute;
     top: 100vh;
     border-left: 10px solid $green;
     margin-top: 25px;
+    padding-top: 2vh;
 
+  }
+
+  input{
+    width: 250px;
+    border-radius: 0;
+    border: 1px solid gray;
+    margin-bottom: 10px;
+  }
+
+  select{
+    border-radius: 0;
+  }
+
+
+
+  button{
+    background-color: #f1f1f1;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-right: none;
+    border-left: none;
+    outline: none;
+    margin-top: 40px;
+    text-align: left;
   }
 } /*CLOSES #PROMOTION */
 
@@ -2166,7 +2192,7 @@ h5{
 
 
 #promotion{
-  height: 100vh;
+  height: 115vh;
   .image-container{
     position: relative;
     float: left;
@@ -2186,12 +2212,16 @@ h5{
 
   .form-container{
     background-color: #f1f1f1;
-    height: 15vh;
+    height: 27.5vh;
     margin-left:  8.5vw;
     width: 91.5vw;
     position: absolute;
     top: 77.5vh;
     border-left: 10px solid $green;
+  }
+
+  h4{
+    margin-top: 0;
   }
 }/* CLOSES #PROMOTION */
 
@@ -2234,13 +2264,17 @@ h5{
 
 
     .form-container{
+      padding-top: 25px;
       background-color: #f1f1f1;
-      height: 30vh;
+      height: 25vh;
       margin-left: 50vw;
       width: 50vw;
       position: absolute;
-      top: 57.5vh;
+      top: 62.5vh;
       border-left: 10px solid $green;
+    }
+    button{
+      margin-top: 15px;
     }
   }
 }
@@ -2908,17 +2942,18 @@ h5{
     padding-top: 12.5vh;
   }
 
-
-
-
   .form-container{
+    padding-top: 25px;
     background-color: #f1f1f1;
-    height: 30vh;
+    height: 25vh;
     margin-left: 50vw;
     width: 50vw;
     position: absolute;
-    top: 57.5vh;
+    top: 62.5vh;
     border-left: 10px solid $green;
+  }
+  button{
+    margin-top: 15px;
   }
 }
 
