--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,51 @@ object {
     color: #333033 !important;
     border-radius: 0; }
 
+.gray-box-container {
+  padding: 15px;
+  margin-top: 10vh;
+  float: left; }
+
+.gray-box {
+  background-color: #f1f1f1;
+  padding-top: 30px;
+  padding-bottom: 30px; }
+
+#gallery {
+  float: left;
+  padding-bottom: 10vh; }
+  #gallery .gallery-item-container {
+    padding: 10px;
+    float: left; }
+  #gallery .gallery-item:hover {
+    transform: scale(1.05); }
+  #gallery .gallery-item {
+    transition: .5s;
+    padding: 0;
+    height: 300px;
+    float: left;
+    box-shadow: 0px 0px 5px #DBDADA; }
+    #gallery .gallery-item .gallery-image-container {
+      height: 215px;
+      width: 100%;
+      float: left;
+      overflow: hidden; }
+      #gallery .gallery-item .gallery-image-container img {
+        float: left;
+        width: 100%; }
+    #gallery .gallery-item h3 {
+      padding: 10px;
+      font-family: Gotham;
+      font-style: normal;
+      float: left;
+      width: 100%;
+      margin-bottom: 0; }
+    #gallery .gallery-item p {
+      float: left;
+      width: 100%;
+      padding-left: 10px;
+      margin-top: 0; }
+
 .copy-container {
   background-color: rgba(229, 229, 229, 0);
   z-index: 1; }
@@ -1821,6 +1866,9 @@ article {
       background-color: #f1f1f1; }
 
   /* END NAV */
+  #gallery .gallery-item {
+    height: 315px; }
+
   #container-2 {
     padding-top: 30vh; }
     #container-2 h2 {
