--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,8 @@ object {
       font-style: normal;
       float: left;
       width: 100%;
-      margin-bottom: 0; }
+      margin-bottom: 0;
+      font-size: 20px; }
     #gallery .gallery-item p {
       float: left;
       width: 100%;
